WIP Se agrega modal alas imagenes para ver mas detalles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Marizinha</title>
 </head>
 
-<body>
+<body style="background-color: #7a6f5d;">
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
